Boltの初チェックお願いします！

--- a/index.html
+++ b/index.html
@@ -7,8 +7,139 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- font awesomeを使うためのリンク的なやつ -->
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <title>Bolt-Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site">
+    <meta name="keyword" content="bolt,bootstrap,portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
-  <body>
 
+  <body>
+    <header>
+      <div class="header_wrapper clearfix">
+        <div class="inner">
+          <div class="header_content">
+              <i class="fas fa-atom fa-3x header_icon"></i>
+          </div>
+          <div class="header_content">
+            <a href="" class="header_content_textbox bolt_btn">
+              <div class="header_contact_text">Contact
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    
+    <main>
+      <div class="title_wrapper">
+        <div class="inner">
+          <div class="title_content">
+            <h1 class="title_text">Bolt Theme</h1>
+          </div>
+          <div class="title_content">
+            <h2 class="subtitle_text">FREE BOOTSTRAP THEMES</h2>
+          </div>
+        </div>
+      </div>
+
+      <section class="iphone_wrapper clearfix">
+        <div class="inner">
+          <div class="iphone_box_content">
+            <div class="iphone_image_box">
+              <img src="./img/iphone.png" alt="iphone" class="img_iphone">
+            </div>
+          </div>
+          <div class="iphone_box_content">
+            <h1 class="iphone_title">WHAT WE CAN DO?</h1>
+            <div class="iphone_description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <article class="our_lastest_work_wrapper">
+        <div class="inner">
+          <h1 class="our_lastest_work_title">OUR LASTEST WORK</h1>
+          <div class="our_lastest_work_container">
+            <img src="./img/01.jpg" alt="our_art" class="img_our_lastest_work">
+            <img src="./img/02.jpg" alt="our_art" class="img_our_lastest_work">
+            <img src="./img/03.jpg" alt="our_art" class="img_our_lastest_work">
+            <img src="./img/04.jpg" alt="our_art" class="img_our_lastest_work">
+            <img src="./img/05.jpg" alt="our_art" class="img_our_lastest_work">
+            <img src="./img/06.jpg" alt="our_art" class="img_our_lastest_work">
+          </div>
+          <div class="our_lastest_work_text_container clearfix">
+            <div class="our_lastest_work_text_content">
+              <div class="our_lastest_work_textbox">
+                <p class="our_lastest_work_text">
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+                </p>
+              </div>
+            </div>
+            <a href="" class="our_lastest_work_text_content bolt_btn">
+              <div class="our_lastest_work_emailbox">
+                <div class="our_lastest_work_email_text">
+                  Email Me!
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </article>
+
+      <section class="our_skills_wrapper">
+        <div class="inner">
+          <h1 class="our_skills_title">OUR SKILLS</h1>
+          <div class="our_skills_container">
+            <div class="our_skills_content">
+              <img src="./img/circle_01.png" class="img_our_skills">
+              <p class="our_skills_text">JavaScript</p>
+            </div>
+            <div class="our_skills_content">
+                <img src="./img/circle_02.png" class="img_our_skills">
+                <p class="our_skills_text">Bootstrap</p>
+            </div>
+            <div class="our_skills_content">
+                <img src="./img/circle_03.png" class="img_our_skills">
+                <p class="our_skills_text">WordPress</p>
+            </div>
+            <div class="our_skills_content">
+                <img src="./img/circle_04.png" class="img_our_skills">
+                <p class="our_skills_text">Photoshop</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <nav class="sns_wrapper">
+        <div class="inner">
+          <div class="sns_container">
+            <a href class="sns_content">
+              <i class="fab fa-facebook-square fa-3x sns_item"></i>
+            </a>
+            <a href="" class="sns_content">
+              <i class="fas fa-globe fa-3x sns_item"></i>
+            </a>
+            <a href="" class="sns_content">             
+              <i class="fab fa-twitter-square fa-3x sns_item"></i>
+            </a>
+            <a href="" class="sns_content">
+              <i class="far fa-envelope fa-3x sns_item"></i>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </main>
+
+    <footer class="footer_wrapper">
+      <div class="inner">
+        <div class="footer_textbox">
+          <p class="footer_text">Crafted with ❤ by BlackTie.co.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
