セルフチェックをしていらない部分のclearfixを外しました！

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <div class="header_wrapper clearfix">
+      <div class="header_wrapper">
         <div class="inner">
           <div class="header_content">
               <i class="fas fa-atom fa-3x header_icon"></i>
@@ -71,7 +71,7 @@
             <img src="./img/05.jpg" alt="our_art" class="img_our_lastest_work">
             <img src="./img/06.jpg" alt="our_art" class="img_our_lastest_work">
           </div>
-          <div class="our_lastest_work_text_container clearfix">
+          <div class="our_lastest_work_text_container">
             <div class="our_lastest_work_text_content">
               <div class="our_lastest_work_textbox">
                 <p class="our_lastest_work_text">
