Boltのチェックお願いします！

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
-  <body>
+  <body class="body_font">
     <header>
       <div class="header_wrapper">
         <div class="inner">
           <div class="header_content">
-              <i class="fas fa-atom fa-3x header_icon"></i>
+            <i class="fas fa-bolt fa-3x"></i>
           </div>
           <div class="header_content">
             <a href="" class="header_content_textbox bolt_btn">
@@ -32,27 +32,25 @@
       </div>
     </header>
     
-    <main>
+    <main class="main_css">
       <div class="title_wrapper">
         <div class="inner">
+          <h1 class="title_text">Bolt Theme</h1>
           <div class="title_content">
-            <h1 class="title_text">Bolt Theme</h1>
-          </div>
-          <div class="title_content">
-            <h2 class="subtitle_text">FREE BOOTSTRAP THEMES</h2>
+            <p class="subtitle_text">FREE BOOTSTRAP THEMES</p>
           </div>
         </div>
       </div>
 
-      <section class="iphone_wrapper clearfix">
-        <div class="inner">
+      <section class="iphone_wrapper">
+        <div class="inner clearfix">
           <div class="iphone_box_content">
             <div class="iphone_image_box">
               <img src="./img/iphone.png" alt="iphone" class="img_iphone">
             </div>
           </div>
           <div class="iphone_box_content">
-            <h1 class="iphone_title">WHAT WE CAN DO?</h1>
+            <h2 class="iphone_title">WHAT WE CAN DO?</h2>
             <div class="iphone_description">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </div>
@@ -62,14 +60,26 @@
 
       <article class="our_lastest_work_wrapper">
         <div class="inner">
-          <h1 class="our_lastest_work_title">OUR LASTEST WORK</h1>
+          <h2 class="our_lastest_work_title">OUR LASTEST WORK</h2>
           <div class="our_lastest_work_container">
-            <img src="./img/01.jpg" alt="our_art" class="img_our_lastest_work">
-            <img src="./img/02.jpg" alt="our_art" class="img_our_lastest_work">
-            <img src="./img/03.jpg" alt="our_art" class="img_our_lastest_work">
-            <img src="./img/04.jpg" alt="our_art" class="img_our_lastest_work">
-            <img src="./img/05.jpg" alt="our_art" class="img_our_lastest_work">
-            <img src="./img/06.jpg" alt="our_art" class="img_our_lastest_work">
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/01.jpg" alt="our_art">
+            </a>
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/02.jpg" alt="our_art">
+            </a>
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/03.jpg" alt="our_art">
+            </a>
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/04.jpg" alt="our_art">
+            </a>
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/05.jpg" alt="our_art">
+            </a>
+            <a href="" class="img_our_lastest_work">
+              <img src="./img/06.jpg" alt="our_art">
+            </a>
           </div>
           <div class="our_lastest_work_text_container">
             <div class="our_lastest_work_text_content">
@@ -92,7 +102,7 @@
 
       <section class="our_skills_wrapper">
         <div class="inner">
-          <h1 class="our_skills_title">OUR SKILLS</h1>
+          <h2 class="our_skills_title">OUR SKILLS</h2>
           <div class="our_skills_container">
             <div class="our_skills_content">
               <img src="./img/circle_01.png" class="img_our_skills">
@@ -121,7 +131,7 @@
               <i class="fab fa-facebook-square fa-3x sns_item"></i>
             </a>
             <a href="" class="sns_content">
-              <i class="fas fa-globe fa-3x sns_item"></i>
+                <i class="fab fa-dribbble fa-3x sns_item"></i>
             </a>
             <a href="" class="sns_content">             
               <i class="fab fa-twitter-square fa-3x sns_item"></i>
@@ -136,10 +146,9 @@
 
     <footer class="footer_wrapper">
       <div class="inner">
-        <div class="footer_textbox">
-          <p class="footer_text">Crafted with ❤ by BlackTie.co.</p>
-        </div>
+        <p class="footer_text">Crafted with ❤ by BlackTie.co.</p>
       </div>
     </footer>
+    
   </body>
 </html>
