Boltのチェックお願いします！

--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
   </head>
 
   <body class="body_font">
-    <header>
-      <div class="header_wrapper">
-        <div class="inner">
-          <div class="header_content">
-            <i class="fas fa-bolt fa-3x"></i>
-          </div>
-          <div class="header_content">
-            <a href="" class="header_content_textbox bolt_btn">
-              <div class="header_contact_text">Contact
-              </div>
-            </a>
-          </div>
+    <header class="header_wrapper">
+      <div class="inner clearfix">
+        <div class="header_content">
+          <i class="fas fa-bolt fa-3x"></i>
+        </div>
+        <div class="header_content">
+          <a href="" class="header_content_textbox bolt_btn">
+            <div class="header_contact_text">Contact
+            </div>
+          </a>
         </div>
       </div>
     </header>
