完了しました！

--- a/index.html
+++ b/index.html
@@ -54,40 +54,40 @@
         </div>
       </section>
 
-      <article class="our_lastest_work_wrapper">
+      <article class="our_latest_work_wrapper">
         <div class="inner">
-          <h2 class="our_lastest_work_title">OUR LASTEST WORK</h2>
-          <div class="our_lastest_work_container">
-            <a href="" class="img_our_lastest_work">
+          <h2 class="our_latest_work_title">OUR LATEST WORK</h2>
+          <div class="our_latest_work_container">
+            <a href="" class="img_our_latest_work">
               <img src="./img/01.jpg" alt="our_art">
             </a>
-            <a href="" class="img_our_lastest_work">
+            <a href="" class="img_our_latest_work">
               <img src="./img/02.jpg" alt="our_art">
             </a>
-            <a href="" class="img_our_lastest_work">
+            <a href="" class="img_our_latest_work">
               <img src="./img/03.jpg" alt="our_art">
             </a>
-            <a href="" class="img_our_lastest_work">
+            <a href="" class="img_our_latest_work">
               <img src="./img/04.jpg" alt="our_art">
             </a>
-            <a href="" class="img_our_lastest_work">
+            <a href="" class="img_our_latest_work">
               <img src="./img/05.jpg" alt="our_art">
             </a>
-            <a href="" class="img_our_lastest_work">
+            <a href="" class="img_our_latest_work">
               <img src="./img/06.jpg" alt="our_art">
             </a>
           </div>
-          <div class="our_lastest_work_text_container">
-            <div class="our_lastest_work_text_content">
-              <div class="our_lastest_work_textbox">
-                <p class="our_lastest_work_text">
+          <div class="our_latest_work_text_container">
+            <div class="our_latest_work_text_content">
+              <div class="our_latest_work_textbox">
+                <p class="our_latest_work_text">
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
                 </p>
               </div>
             </div>
-            <a href="" class="our_lastest_work_text_content bolt_btn">
-              <div class="our_lastest_work_emailbox">
-                <div class="our_lastest_work_email_text">
+            <a href="" class="our_latest_work_text_content bolt_btn">
+              <div class="our_latest_work_emailbox">
+                <div class="our_latest_work_email_text">
                   Email Me!
                 </div>
               </div>
