Boltのレスポンシブが終わりました！

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
             <div class="header_contact_text">Contact
             </div>
           </a>
+          <a href="" class="humberger_css humberger_menu">
+            <span class="humberger_css humberger_bar"></span>
+            <span class="humberger_css humberger_bar"></span>
+            <span class="humberger_css humberger_bar"></span>
+          </a>
         </div>
       </div>
     </header>
@@ -33,8 +38,22 @@
     <main class="main_css">
       <div class="title_wrapper">
         <div class="inner">
-          <h1 class="title_text">Bolt Theme</h1>
-          <p class="subtitle_text">FREE BOOTSTRAP THEMES</p>
+          <h1 class="title_text">
+            <span class="title_text_sp">
+              Bolt
+            </span>
+            <span class="title_text_sp">
+              Theme
+            </span>
+          </h1>
+          <p class="subtitle_text">
+            <span class="subtitle_text_sp">
+              FREE BOOTSRAP
+            </span>
+            <span class="subtitle_text_sp">
+              THEMES
+            </span>
+          </p>
         </div>
       </div>
 
